fixed list grid has scrollbar in ie #8799

--- a/components/list/style/index.less
+++ b/components/list/style/index.less
@@ -9,6 +9,9 @@
   * {
     outline: none;
   }
+  .ant-spin-container {
+    overflow: visible;
+  }
   &-pagination {
     margin-top: 24px;
     text-align: right;
